# course-project-nessornot

./: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-p11-dast.yml  ci-p12-iac-container.yml  ci-sast-secrets.yml  ci-sbom-sca.yml  ci.yml
EVIDENCE/P09/: sbom.json  sca_report.json  sca_summary.md
EVIDENCE/P10/: gitleaks.json  sast_summary.md  semgrep.sarif
EVIDENCE/P11/: zap_baseline.html  zap_baseline.json
EVIDENCE/P12/: checkov_report.json  hardening_summary.md  trivy_report.json
app/: main.py
docs/adr/: ADR-001-input-validation.md  ADR-002-rfc-7807.md  ADR-003-rate-limiting.md
docs/security-nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: DFD.md  RISKS.md  STRIDE.md
iac/: deployment.yaml
policy/: waivers.yml
security/: .gitleaks.toml  checkov.yaml
security/semgrep/: rules.yml
tests/: test_main.py
